--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "test_changelog",
-  "version": "2.3.2",
+  "version": "2.3.3",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@commitlint/cli": "^16.2.1",
+    "@commitlint/config-conventional": "^16.2.1",
     "standard-version": "^9.3.2"
   }
 }
